# gomoku

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Gomoku - Dossier Technique.docx  Makefile  README.md  cmake_install.cmake  gomoku.cbp  out  pbrain-GroMoCrew.rar
include/: AI.hpp  Application.hpp  Brain.hpp  Game.hpp  Info.h  MyMultiset.hpp  Protocol.hpp
source/: AI.cpp  Application.cpp  Brain.cpp  Game.cpp  Protocol.cpp  main.cpp
